lib/src/ffi/y_dart_bindings_generated.dart


  /// Gets or creates a new shared `YXmlElement` data type instance as a root-level type of a given
  /// document. This structure can later be accessed using its `name`, which must be a null-terminated
  /// UTF-8 compatible string.
  ffi.Pointer<Branch> yxmlfragment(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _yxmlfragment(
      doc,
      name,
    );
  }

  late final _yxmlfragmentPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>>('yxmlfragment');
  late final _yxmlfragment = _yxmlfragmentPtr.asFunction<
      ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>();

  /// Returns a state vector of a current transaction's document, serialized using lib0 version 1
  /// encoding. Payload created by this function can then be send over the network to a remote peer,
  /// where it can be used as a parameter of [ytransaction_state_diff_v1] in order to produce a delta
  /// update payload, that can be send back and applied locally in order to efficiently propagate
  /// updates from one peer to another.
  ///
  /// The length of a generated binary will be passed within a `len` out parameter.
  ///
  /// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
  ffi.Pointer<ffi.Char> ytransaction_state_vector_v1(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_state_vector_v1(
      txn,
      len,
    );
  }

  late final _ytransaction_state_vector_v1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Uint32>)>>('ytransaction_state_vector_v1');
  late final _ytransaction_state_vector_v1 =
      _ytransaction_state_vector_v1Ptr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>();

  /// Returns a delta difference between current state of a transaction's document and a state vector
  /// `sv` encoded as a binary payload using lib0 version 1 encoding (which could be generated using
  /// [ytransaction_state_vector_v1]). Such delta can be send back to the state vector's sender in
  /// order to propagate and apply (using [ytransaction_apply]) all updates known to a current
  /// document, which remote peer was not aware of.
  ///
  /// If passed `sv` pointer is null, the generated diff will be a snapshot containing entire state of
  /// the document.
  ///
  /// A length of an encoded state vector payload must be passed as `sv_len` parameter.
  ///
  /// A length of generated delta diff binary will be passed within a `len` out parameter.
  ///
  /// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
  ffi.Pointer<ffi.Char> ytransaction_state_diff_v1(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> sv,
    int sv_len,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_state_diff_v1(
      txn,
      sv,
      sv_len,
      len,
    );
  }

  late final _ytransaction_state_diff_v1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint32,
              ffi.Pointer<ffi.Uint32>)>>('ytransaction_state_diff_v1');
  late final _ytransaction_state_diff_v1 =
      _ytransaction_state_diff_v1Ptr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Returns a delta difference between current state of a transaction's document and a state vector
  /// `sv` encoded as a binary payload using lib0 version 1 encoding (which could be generated using
  /// [ytransaction_state_vector_v1]). Such delta can be send back to the state vector's sender in
  /// order to propagate and apply (using [ytransaction_apply_v2]) all updates known to a current
  /// document, which remote peer was not aware of.
  ///
  /// If passed `sv` pointer is null, the generated diff will be a snapshot containing entire state of
  /// the document.
  ///
  /// A length of an encoded state vector payload must be passed as `sv_len` parameter.
  ///
  /// A length of generated delta diff binary will be passed within a `len` out parameter.
  ///
  /// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
  ffi.Pointer<ffi.Char> ytransaction_state_diff_v2(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> sv,
    int sv_len,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_state_diff_v2(
      txn,
      sv,
      sv_len,
      len,
    );
  }

  late final _ytransaction_state_diff_v2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint32,
              ffi.Pointer<ffi.Uint32>)>>('ytransaction_state_diff_v2');
  late final _ytransaction_state_diff_v2 =
      _ytransaction_state_diff_v2Ptr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Returns a snapshot descriptor of a current state of the document. This snapshot information
  /// can be then used to encode document data at a particular point in time
  /// (see: `ytransaction_encode_state_from_snapshot`).
  ffi.Pointer<ffi.Char> ytransaction_snapshot(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_snapshot(
      txn,
      len,
    );
  }

  late final _ytransaction_snapshotPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Uint32>)>>('ytransaction_snapshot');
  late final _ytransaction_snapshot = _ytransaction_snapshotPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>();

  /// Encodes a state of the document at a point in time specified by the provided `snapshot`
  /// (generated by: `ytransaction_snapshot`). This is useful to generate a past view of the document.
  ///
  /// The returned update is binary compatible with Yrs update lib0 v1 encoding, and can be processed
  /// with functions dedicated to work on it, like `ytransaction_apply`.
  ///
  /// This function requires document with a GC option flag turned off (otherwise "time travel" would
  /// not be a safe operation). If this is not a case, the NULL pointer will be returned.
  ffi.Pointer<ffi.Char> ytransaction_encode_state_from_snapshot_v1(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> snapshot,
    int snapshot_len,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_encode_state_from_snapshot_v1(
      txn,
      snapshot,
      snapshot_len,
      len,
    );
  }

  late final _ytransaction_encode_state_from_snapshot_v1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
                  ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>>(
      'ytransaction_encode_state_from_snapshot_v1');
  late final _ytransaction_encode_state_from_snapshot_v1 =
      _ytransaction_encode_state_from_snapshot_v1Ptr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Encodes a state of the document at a point in time specified by the provided `snapshot`
  /// (generated by: `ytransaction_snapshot`). This is useful to generate a past view of the document.
  ///
  /// The returned update is binary compatible with Yrs update lib0 v2 encoding, and can be processed
  /// with functions dedicated to work on it, like `ytransaction_apply_v2`.
  ///
  /// This function requires document with a GC option flag turned off (otherwise "time travel" would
  /// not be a safe operation). If this is not a case, the NULL pointer will be returned.
  ffi.Pointer<ffi.Char> ytransaction_encode_state_from_snapshot_v2(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> snapshot,
    int snapshot_len,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_encode_state_from_snapshot_v2(
      txn,
      snapshot,
      snapshot_len,
      len,
    );
  }

  late final _ytransaction_encode_state_from_snapshot_v2Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
                  ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>>(
      'ytransaction_encode_state_from_snapshot_v2');
  late final _ytransaction_encode_state_from_snapshot_v2 =
      _ytransaction_encode_state_from_snapshot_v2Ptr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Returns an unapplied Delete Set for the current document, waiting for missing updates in order
  /// to be integrated into document store.
  ///
  /// Return `NULL` if there's no missing delete set and all deletions have been applied.
  /// See also: `ytransaction_pending_update`
  ffi.Pointer<YDeleteSet> ytransaction_pending_ds(
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytransaction_pending_ds(
      txn,
    );
  }

  late final _ytransaction_pending_dsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YDeleteSet> Function(
              ffi.Pointer<YTransaction>)>>('ytransaction_pending_ds');
  late final _ytransaction_pending_ds = _ytransaction_pending_dsPtr.asFunction<
      ffi.Pointer<YDeleteSet> Function(ffi.Pointer<YTransaction>)>();

  void ydelete_set_destroy(
    ffi.Pointer<YDeleteSet> ds,
  ) {
    return _ydelete_set_destroy(
      ds,
    );
  }

  late final _ydelete_set_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YDeleteSet>)>>(
          'ydelete_set_destroy');
  late final _ydelete_set_destroy = _ydelete_set_destroyPtr
      .asFunction<void Function(ffi.Pointer<YDeleteSet>)>();

  /// Returns a pending update associated with an underlying `YDoc`. Pending update contains update
  /// data waiting for being integrated into main document store. Usually reason for that is that
  /// there were missing updates required for integration. In such cases they need to arrive and be
  /// integrated first.
  ///
  /// Returns `NULL` if there is not update pending. Returned value can be released by calling
  /// `ypending_update_destroy`.
  /// See also: `ytransaction_pending_ds`
  ffi.Pointer<YPendingUpdate> ytransaction_pending_update(
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytransaction_pending_update(
      txn,
    );
  }

  late final _ytransaction_pending_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YPendingUpdate> Function(
              ffi.Pointer<YTransaction>)>>('ytransaction_pending_update');
  late final _ytransaction_pending_update =
      _ytransaction_pending_updatePtr.asFunction<
          ffi.Pointer<YPendingUpdate> Function(ffi.Pointer<YTransaction>)>();

  void ypending_update_destroy(
    ffi.Pointer<YPendingUpdate> update,
  ) {
    return _ypending_update_destroy(
      update,
    );
  }

  late final _ypending_update_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YPendingUpdate>)>>(
      'ypending_update_destroy');
  late final _ypending_update_destroy = _ypending_update_destroyPtr
      .asFunction<void Function(ffi.Pointer<YPendingUpdate>)>();
